--- a/app/src/main/res/layout/review_mosquitos_fragment.xml
+++ b/app/src/main/res/layout/review_mosquitos_fragment.xml
@@ -19,70 +19,68 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        style="@style/describ_title2"
-                        android:text="检查路径:"/>
-
-                    <EditText
-                        android:id="@+id/et_jianchalujing"
-                        style="@style/et_style2"
-                        android:layout_width="wrap_content"
-                        android:hint="0"
-                        android:minWidth="50dp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="个"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    style="@style/insert_mouse_fragment_ll_style"
-                    android:layout_width="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        style="@style/describ_title2"
-                        android:paddingLeft="4dp"
-                        android:text="查见灭蚊灯:"/>
-
-                    <EditText
-                        android:id="@+id/et_chajianmiewendeng"
-                        style="@style/et_style2"
-                        android:layout_width="wrap_content"
-                        android:hint="0"
-                        android:minWidth="50dp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="个"/>
-                </LinearLayout>
-            </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_xiaoxingjishui_wai"
+                android:id="@+id/ll_xiaoxingjishuitou"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    style="@style/describ_title"
-                    android:text="小型积水类型"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:text="检查路径:"/>
+
+                        <EditText
+                            android:id="@+id/et_jianchalujing"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/insert_mouse_fragment_ll_style"
+                        android:layout_width="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/describ_title2"
+                            android:paddingLeft="4dp"
+                            android:text="查见灭蚊灯:"/>
+
+                        <EditText
+                            android:id="@+id/et_chajianmiewendeng"
+                            style="@style/et_style2"
+                            android:layout_width="wrap_content"
+                            android:hint="0"
+                            android:minWidth="50dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="4dp"
+                            android:gravity="center"
+                            android:text="个"/>
+                    </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -102,7 +100,8 @@
                             android:id="@+id/et_chanjianxiaoxingjishui"
                             style="@style/et_style2"
                             android:layout_width="wrap_content"
-                            android:hint="0"
+                            android:enabled="false"
+                            android:hint="自动计算"
                             android:minWidth="50dp"/>
 
                         <TextView
@@ -116,7 +115,7 @@
                     <LinearLayout
                         style="@style/insert_mouse_fragment_ll_style"
                         android:layout_width="0dp"
-                        android:layout_weight="0.7">
+                        android:layout_weight="1">
 
                         <TextView
                             style="@style/describ_title2"
@@ -139,6 +138,20 @@
                             android:text="个"/>
                     </LinearLayout>
                 </LinearLayout>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_xiaoxingjishui_wai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/describ_title"
+                    android:text="小型积水类型"/>
             </LinearLayout>
 
 
